--- a/assessment2/style.css
+++ b/assessment2/style.css
@@ -1,15 +1,56 @@
-body,
-html {
+html,
+body {
   margin: 0;
   padding: 0;
   background: #111;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+
+#wrapper {
+  width: fit-content;
+  margin-top: 20px;
+  transform: scale(1.2); /* Slightly bigger */
+  transform-origin: top center;
+  margin-bottom: 20px;
 }
 
 #container {
   border: 2px solid #333;
-  box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 12px rgba(227, 170, 26, 0.2);
+}
+
+#controls {
+  padding-top: 40px;
+}
+
+label {
+  color: white;
+  font-size: 1.4rem;
+}
+
+select,
+button {
+  font-size: 1.1rem;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+#playButton {
+  font-size: 1.5rem;
+  padding: 10px 20px;
+  background-color: #ffc73a;
+  margin-top: 80px; /* Adds some space above the button */
+}
+
+button.active {
+  background-color: #007bff;
+  color: white;
+  border: 2px solid #0056b3;
 }
