--- a/assessment2/style.css
+++ b/assessment2/style.css
@@ -137,7 +137,7 @@ button.clicked {
   transform: translateX(-50%);
   margin-top: 8px;
   white-space: normal;
-  width: 250spx;
+  width: 250px;
   word-wrap: break-word;
   z-index: 1;
   opacity: 0;
