--- a/assessment2/style.css
+++ b/assessment2/style.css
@@ -87,7 +87,7 @@ button.clicked {
   margin-bottom: 8px;
   opacity: 0;
   transition: opacity 0.3s ease;
-  font-size: 17px;
+  font-size: 18x;
   line-height: 1.4;
   white-space: nowrap;
   max-width: 300px;
@@ -142,7 +142,7 @@ button.clicked {
   z-index: 1;
   opacity: 0;
   transition: opacity 0.3s ease;
-  font-size: 17px;
+  font-size: 18px;
   line-height: 1.4;
 }
 
