--- a/assessment2/style.css
+++ b/assessment2/style.css
@@ -14,7 +14,7 @@ body {
 #wrapper {
   width: fit-content;
   margin-top: 20px;
-
+  transform: scale(1.2);
   transform-origin: top center;
   margin-bottom: 110px;
 }
